# east_asian_spacing

./: .envrc  .gitignore  .yapfignore  Builder.py  Dump.py  EastAsianSpacing.py  EastAsianSpacingBuilder.py  Font.py  FontBuilder.py  GlyphSet.py  ListTables.py  NotoCJKBuilder.py  Pipfile  README.md  Shaper.py  Taskfile.yml  Tester.py  TextRun.py  build-noto-cjk.sh  builder.py  contextual_spacing_analysis.ipynb  diff-ref.sh  download-fonts.sh  features-analysis.ipynb  features.txt  format.sh  make-android.sh  make-chromeos.sh  make-noto-cjk.py  make-noto-cjk.sh  precommit.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
docs/: glyphlist-ja.md  releasing.md
east_asian_spacing/: __init__.py  __main__.py  builder.py  config.py  dump.py  east_asian_spacing.py  font.py  log_utils.py  noto_cjk_builder.py  shaper.py  spacing.py  tester.py  ttc.py  utils.py
reference/: NotoSansCJK-Bold.ttc-2.ttx.diff  NotoSansCJK-Bold.ttc.tables.diff  NotoSansCJK-Light.ttc-tablelist.diff  NotoSansCJK-Regular-chws.ttc-2.diff  NotoSansCJK-Regular.ttc-0.ttx.diff  NotoSansCJK-Regular.ttc.tables.diff  NotoSerifCJK-Bold.ttc-2.ttx.diff  NotoSerifCJK-Light.ttc-tablelist.diff  NotoSerifCJK-Regular.ttc-tablelist.diff  meiryo.ttc-0.G_P_O_S_.ttx.diff  meiryo.ttc-gids  meiryo.ttc-glyphs
references/: BIZ-UDGothicR.ttc-0.G_P_O_S_.ttx.diff  BIZ-UDGothicR.ttc-1.G_P_O_S_.ttx.diff  BIZ-UDGothicR.ttc-glyphs  BIZ-UDGothicR.ttc.tables.diff  BIZUDGothic-Bold.ttf-glyphs  BIZUDGothic-Bold.ttf.tables.diff  BIZUDGothic-Regular.ttf.G_P_O_S_.ttx.diff  BIZUDGothic-Regular.ttf.tables.diff  NotoSansCJK-Bold.ttc-0.G_P_O_S_.ttx.diff  NotoSansCJK-Bold.ttc-1.G_P_O_S_.ttx.diff  NotoSansCJK-Bold.ttc-2.G_P_O_S_.ttx.diff  NotoSansCJK-Bold.ttc-3.G_P_O_S_.ttx.diff  NotoSansCJK-Bold.ttc-4.G_P_O_S_.ttx.diff  NotoSansCJK-Bold.ttc-glyphs  NotoSansCJK-Bold.ttc.tables.diff  NotoSansCJK-Light.ttc-0.G_P_O_S_.ttx.diff  NotoSansCJK-Light.ttc-2.G_P_O_S_.ttx.diff  NotoSansCJK-Light.ttc-3.G_P_O_S_.ttx.diff  NotoSansCJK-Light.ttc.tables.diff  NotoSansCJK-Regular.ttc-1.G_P_O_S_.ttx.diff  NotoSansCJK-Regular.ttc-2.G_P_O_S_.ttx.diff  NotoSansCJK-Regular.ttc-3.G_P_O_S_.ttx.diff  NotoSansCJK-Regular.ttc-4.G_P_O_S_.ttx.diff  NotoSansCJK-Regular.ttc-glyphs  NotoSansCJK-Regular.ttc.tables.diff  NotoSansCJK-VF.otf.ttc-1.G_P_O_S_.ttx.diff  NotoSansCJK-VF.otf.ttc-2.G_P_O_S_.ttx.diff  NotoSansCJK-VF.otf.ttc-3.G_P_O_S_.ttx.diff  NotoSansCJK-VF.otf.ttc-4.G_P_O_S_.ttx.diff  NotoSansCJK-VF.otf.ttc-glyphs  NotoSansCJK-VF.otf.ttc.tables.diff  NotoSansCJK-VF.ttf.ttc-0.G_P_O_S_.ttx.diff  NotoSansCJK-VF.ttf.ttc-1.G_P_O_S_.ttx.diff  NotoSansCJK-VF.ttf.ttc-2.G_P_O_S_.ttx.diff  NotoSansCJK-VF.ttf.ttc-3.G_P_O_S_.ttx.diff  NotoSansCJK-VF.ttf.ttc.tables.diff  NotoSansCJKjp-Regular.otf-glyphs  NotoSansCJKjp-Regular.otf.G_P_O_S_.ttx.diff  NotoSansCJKjp-Regular.otf.tables.diff  NotoSerifCJK-Bold.ttc-0.G_P_O_S_.ttx.diff  (+33 more)
scripts/: build-android.sh  build-chromeos.sh  build-noto-cjk.sh  build-subset.sh  build.sh  diff-ref.sh  splitttc.py
tests/: builder_test.py  config_test.py  conftest.py  download_fonts.py  dump_test.py  font_test.py  full_test.py  prepare.sh  shaper_test.py  spacing_test.py  test_Builder.py  test_Dump.py  test_all.py  (+8 more)
(+30 files in other folders)
