[project]
name = "east_asian_spacing"
version = "1.4.4"
description = "East Asian Contextual Spacing Build Tools"
authors = [{name = "Koji Ishii", email="kojii@chromium.org"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = [
    "fonttools[woff]>=4.57.0",
    "uharfbuzz>=0.50.2",
]

[project.urls]
repository = "https://github.com/kojiishi/east_asian_spacing"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    # `pytype` supports 3.8-3.12 (May 15, 2025)
    # https://github.com/google/pytype/#requirements
    "pytype>=2024.9.13; python_version <= '3.12'",
    "tox>=4.25.0",
    "tox-uv>=1.13.1",
    "yapf>=0.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
east-asian-spacing = 'east_asian_spacing.__main__:main'

[tool.pytest.ini_options]
testpaths = "tests"

[tool.uv]
# https://docs.astral.sh/uv/concepts/cache/#dynamic-metadata
# https://docs.astral.sh/uv/reference/settings/#cache-keys
# https://github.com/astral-sh/uv/issues/6964#issuecomment-2339340947
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.yapf]
based_on_style = "pep8"
