[project]
name = "east_asian_spacing"
version = "1.4.4"
description = "East Asian Contextual Spacing Build Tools"
authors = [{name = "Koji Ishii", email="kojii@chromium.org"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "fonttools[woff]>=4.57.0",
    "uharfbuzz>=0.50.2",
]

[project.urls]
repository = "https://github.com/kojiishi/east_asian_spacing"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "tox>=4.25.0",
    "tox-uv>=1.13.1",
    "yapf>=0.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
east-asian-spacing = 'east_asian_spacing.__main__:main'

[tool.pytest.ini_options]
testpaths = "tests"

[tool.yapf]
based_on_style = "pep8"
