[project]
name = "east_asian_spacing"
dynamic = ["version"]
description = "East Asian Contextual Spacing Build Tools"
authors = [{name = "Koji Ishii", email="kojii@chromium.org"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "fonttools[woff]>=4.57.0",
    "uharfbuzz>=0.50.2",
]

[project.urls]
repository = "https://github.com/kojiishi/east_asian_spacing"

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.20",
    "tox>=4.25.0",
    "tox-uv>=1.13.1",
    "yapf>=0.43.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "setuptools-scm>=10.2.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
east-asian-spacing = 'east_asian_spacing.__main__:main'

[tool.pytest.ini_options]
testpaths = "tests"

[tool.setuptools_scm]
# https://github.com/pypa/setuptools-scm
version_file = "src/east_asian_spacing/_version.py"
# https://github.com/dependabot/dependabot-core/issues/12340
fallback_version = "0.0.0"

[tool.yapf]
based_on_style = "pep8"
